# InfiniFrame

./: .editorconfig  .gitignore  Directory.Packages.props  InfiniLore.InfiniFrame.GitHubActions.Linux.slnf  InfiniLore.InfiniFrame.GitHubActions.Pack.slnf  InfiniLore.InfiniFrame.GitHubActions.Windows.slnf  InfiniLore.InfiniFrame.GitHubActions.WindowsPlaywright.slnf  InfiniLore.InfiniFrame.GitHubActions.slnf  InfiniLore.InfiniFrame.slnx  InfiniLore.Photino.GitHubActions.Linux.slnf  InfiniLore.Photino.GitHubActions.MacOs.slnf  InfiniLore.Photino.GitHubActions.slnf  InfiniLore.Photino.sln.DotSettings  InfiniLore.Photino.slnx  Photino.NET.sln  README.md  install_nuget.ps1  makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: onPullRequest-multiPlatformTesting.yml  onPullRequest-optionalCheck.yml  onPullRequest-pendingCheck.yml  onPullRequest.yml  onRelease.yml  release.yml  workflow-todo.yml
.run/: watch_typescript.run.xml
dev/: bump_version.py
examples/: Directory.Build.props
examples/Example.Blazor.MultiWindowSample/: Example.Blazor.MultiWindowSample.csproj  Program.cs
examples/Example.Blazor.Sample/: App.razor  Example.Blazor.Sample.csproj  NuGet.config  Program.cs  _Imports.razor
examples/Example.InfiniLore.Photino.Blazor.HelloWorld/: App.razor  Example.InfiniLore.Photino.Blazor.HelloWorld.csproj  Program.cs
examples/Example.InfiniLore.Photino.Blazor.MultiWindowSample/: Example.InfiniLore.Photino.Blazor.MultiWindowSample.csproj  Program.cs
examples/Example.InfiniLore.Photino.Blazor.NativeAOT/: App.razor.cs  Example.InfiniLore.Photino.Blazor.NativeAOT.csproj  Microsoft.AspNetCore.Components.Web.rd.xml  Program.cs  _Imports.razor  rd.xml
examples/Example.InfiniLore.Photino.Blazor.Sample/: Example.InfiniLore.Photino.Blazor.Sample.csproj  Program.cs  _Imports.razor
examples/Example.InfiniLore.Photino.NetServer.React/: Example.InfiniLore.Photino.NetServer.React.csproj  Program.cs
examples/Example.InfiniLore.Photino.NetServer.Vue/: Example.InfiniLore.Photino.NetServer.Vue.csproj  Program.cs
examples/Example.InfiniLore.Photino.NetServer.Vue.Fullscreen/: Example.InfiniLore.Photino.NetServer.Vue.Fullscreen.csproj  Program.cs
examples/Example.NetServer.React/: Example.NetServer.React.csproj  Program.cs
examples/Example.NetServer.Vue/: Example.NetServer.Vue.csproj  Program.cs
examples/Example.NetServer.Vue.Fullscreen/: Example.NetServer.Vue.Fullscreen.csproj  Program.cs
examples/HelloWorld/: HelloWorld.csproj
examples/Photino.Blazor.MultiWindowSample/: Photino.Blazor.MultiWindowSample.csproj
examples/Photino.Blazor.NativeAOT/: Photino.Blazor.NativeAOT.csproj
examples/Photino.Blazor.Sample/: Photino.Blazor.Sample.csproj
src/: Directory.Build.props
src/InfiniLore.InfiniFrame/: InfiniFrameWindow.cs  InfiniFrameWindowBuilder.cs  InfiniFrameWindowConfiguration.cs  InfiniFrameWindowEvents.cs  InfiniFrameWindowMessageHandlers.cs  InfiniLore.InfiniFrame.csproj  InfiniLore.InfiniFrame.csproj.DotSettings  MessageLoopState.cs  PhotinoConfiguration.cs  PhotinoWindow.cs  PhotinoWindowBuilder.cs  PhotinoWindowEvents.cs  PhotinoWindowMessageHandlers.cs
src/InfiniLore.InfiniFrame.Blazor/: InfiniFrameBlazorApp.cs  InfiniFrameBlazorAppBuilder.cs  InfiniFrameBlazorAppConfiguration.cs  InfiniFrameDispatcher.cs  InfiniFrameHttpHandler.cs  InfiniFrameJsComponentConfiguration.cs  InfiniFrameSynchronizationContext.cs  InfiniFrameSynchronizationState.cs  InfiniFrameSynchronizationWorkItem.cs  InfiniFrameWebViewManager.cs  InfiniLore.InfiniFrame.Blazor.csproj  PhotinoBlazorApp.cs  PhotinoBlazorAppBuilder.cs  PhotinoBlazorAppConfiguration.cs  PhotinoDispatcher.cs  PhotinoHttpHandler.cs  PhotinoJSComponentConfiguration.cs  PhotinoSynchronizationContext.cs  PhotinoSynchronizationState.cs  PhotinoSynchronizationWorkItem.cs  PhotinoWebViewManager.cs  RootComponentList.cs
src/InfiniLore.InfiniFrame.Js/: HandlerNames.cs  InfiniFrameJsAssemblyEntry.cs  InfiniLore.InfiniFrame.Js.csproj  InfiniWindowJs.cs  PhotinoJsAssemblyEntry.cs
src/InfiniLore.InfiniFrame.NET/: InfiniLore.InfiniFrame.NET.csproj  MessageLoopState.cs  PhotinoConfiguration.cs  PhotinoWindow.cs  PhotinoWindowBuilder.cs  PhotinoWindowEvents.cs  PhotinoWindowMessageHandlers.cs
src/InfiniLore.InfiniFrame.NET.Server/: InfiniLore.InfiniFrame.NET.Server.csproj  PhotinoServerBuilder.cs
src/InfiniLore.InfiniFrame.Native/: CMakeLists.txt  Exports.cpp  InfiniLore.InfiniFrame.Native.proj  Photino.Dialog.h  Photino.Linux.Dialog.cpp  Photino.Linux.cpp  Photino.Mac.AppDelegate.h  Photino.Mac.NSWindowBorderless.h  Photino.Mac.NavigationDelegate.h  Photino.Mac.UiDelegate.h  Photino.Mac.UrlSchemeHandler.h  Photino.Mac.WindowDelegate.h  Photino.Mac.mm  Photino.Native.rc  Photino.Windows.DarkMode.cpp  Photino.Windows.DarkMode.h  Photino.Windows.Dialog.cpp  Photino.Windows.ToastHandler.h  Photino.Windows.cpp  Photino.h  json.hpp  packages.config
src/InfiniLore.InfiniFrame.Server/: InfiniFrameServer.cs  InfiniFrameServerBuilder.cs  InfiniLore.InfiniFrame.Server.csproj  InfiniLore.InfiniFrame.Server.csproj.DotSettings
src/InfiniLore.InfiniFrame.Shared/: IInfiniFrameWindow.cs  IInfiniFrameWindowBase.cs  IInfiniFrameWindowBuilder.cs  IInfiniFrameWindowConfiguration.cs  IInfiniFrameWindowEvents.cs  IInfiniFrameWindowMessageHandlers.cs  InfiniLore.InfiniFrame.Shared.csproj  InfiniLore.InfiniFrame.Shared.csproj.DotSettings  Monitor.cs  NativeMonitor.cs  NativeRect.cs
src/InfiniLore.Photino.Blazor/: IPhotinoEnvironment.cs  InfiniLore.Photino.Blazor.csproj  Photino.Blazor.nuspec  PhotinoBlazorApp.cs  PhotinoBlazorAppBuilder.cs  PhotinoBlazorAppConfiguration.cs  PhotinoDispatcher.cs  PhotinoEnvironment.cs  PhotinoHttpHandler.cs  PhotinoJSComponentConfiguration.cs  PhotinoSynchronizationContext.cs  PhotinoSynchronizationState.cs  (+8 more)
src/InfiniLore.Photino.Native/: CMakeLists.txt  Exports.cpp  InfiniLore.Photino.Native.nuspec  InfiniLore.Photino.Native.proj  InfiniLore.Photino.Native.vcxproj  library.h
tests/: Directory.Build.props
(+431 files in other folders)
